# robot_housewife

./: README.md
choisugil/: README.md
choisugil/2022_11_28/CSI-Camera/: simple_camera2.cpp  simple_camera3.cpp  simple_camera_hop.cpp
choisugil/2022_11_28/hansu_cam/: package.xml
choisugil/2022_11_28/src-colcon/open_manipulator/open_manipulator_x_controller/src/: open_manipulator_x_controller.cpp
choisugil/2022_11_28/src-robot/wfmp_main_pkg/: package.xml  setup.py
choisugil/2022_11_28/src-robot/wfmp_main_pkg/wfmp_main_pkg/: req_get_param.py
choisugil/CSI-Camera/: cam.cpp  simple_camera.cpp
choisugil/hansu_cam/: CMakeLists.txt  CMakeLists_bak.txt
choisugil/hansu_cam/src/: opencv_cam_node.cpp  opencv_cam_node.hpp
choisugil/opencr_update/: turtlebot3_manipulation.opencr
choisugil/src-colcon/open_manipulator/open_manipulator_x_controller/launch/: open_manipulator_x_controller.launch.py
choisugil/src-colcon/open_manipulator/open_manipulator_x_teleop/open_manipulator_x_teleop/script/: teleop_keyboard.py
hansu/: README.md  webcam_sub.py
ksj/: README.md  by_param.py  followwaypoint.py  followwaypoint1.py  followwaypoint2.py
wafflemanipulator_main-main/: README.md
wafflemanipulator_main-main/wfmp_main_pkg/: setup.cfg
wafflemanipulator_main-main/wfmp_main_pkg/wfmp_main_pkg/: by_param.py  req_set_param.py  wfmp_ex.py
